--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ rvm:
   - 2.1.2
   #- 2.2.1
 before_install:
-  - ===================before_install_area============================
+  - echo ===================before_install_area============================
   # 注意する点として、Travisがテストをする環境はUbuntu 12.04 LTS Server Edition 64 bit
   # apt-get -y ****
 install:
-  - ===================install_area============================
+  - echo ===================install_area============================
   # bundleも自動で実行してくれる(bundle install --jobs=3 --retry=3)
   # もしbundle以外でいれたいlibraryがある場合は、installコマンドを使う
   # install: gem install rails
@@ -38,18 +38,18 @@ script:
   # => :testグループを作っておこう
   
 after_success:
-  - ===================after_sucess_area============================
+  - echo ===================after_sucess_area============================
 
 after_failure:
-  - ===================after_failure_area============================
+  - echo ===================after_failure_area============================
 
 after_script:
-  - ===================after_script_area============================
+  - echo ===================after_script_area============================
 
 notifications:
   email:
     recipients: hiroaki-iwase
     on_success: change
-    on_failure: always # 常にメールする
-    on_failure: never  # 常にメールしない
+    #on_failure: always # 常にメールする
+    #on_failure: never  # 常にメールしない
     on_failure: change # 前の実行時とステータスが変わった時のみ送る
