--- a/.travis.yml
+++ b/.travis.yml
@@ -42,18 +42,18 @@ script:
   # => つまりここに何か書いてある場合は実行されない
   
 after_success:
-  - echo ===================after_sucess_area============================
+  - #echo ===================after_sucess_area============================
 
 after_failure:
-  - echo ===================after_failure_area============================
+  - #echo ===================after_failure_area============================
 
 after_script:
-  - echo ===================after_script_area============================
+  - #echo ===================after_script_area============================
 
 notifications:
   email:
     recipients: hiroaki-iwase
     on_success: change
-    #on_failure: always # 常にメールする
+    on_failure: always # 常にメールする
     #on_failure: never  # 常にメールしない
-    on_failure: change # 前の実行時とステータスが変わった時のみ送る
+    #on_failure: change # 前の実行時とステータスが変わった時のみ送る
